refactor: display of api info on header

--- a/src/app/api/api.scss
+++ b/src/app/api/api.scss
@@ -132,6 +132,7 @@ $flowRadius: 120px;
 .gravitee-api-header-content {
   color: white;
   padding-left: 20px !important;
+  width: 100%;
 }
 
 .gravitee-api-header-content ng-md-icon {
