--- a/src/app/components/documentation/page.html
+++ b/src/app/components/documentation/page.html
@@ -15,7 +15,7 @@
     limitations under the License.
 
 -->
-<div style="padding-top: 30px;">
+<div>
   <div ng-if="pageCtrl.markdownType()" btf-markdown="page.content">
   </div>
 
