feat(descriptor): Add a descriptor tab to get the definition of an API

--- a/src/app/api/admin/apiAdmin.html
+++ b/src/app/api/admin/apiAdmin.html
@@ -27,6 +27,7 @@
     <md-tab label="properties" ui-sref="apis.admin.properties"></md-tab>
     <md-tab label="analytics" ui-sref="apis.admin.analytics"></md-tab>
     <md-tab label="monitoring" ui-sref="apis.admin.monitoring"></md-tab>
+    <md-tab label="descriptor" ui-sref="apis.admin.descriptor"></md-tab>
   </md-tabs>
 
   <div ui-view flex class="inset"></div>
