fix(api policy): disable reset

--- a/src/app/api/admin/apiPolicies.html
+++ b/src/app/api/admin/apiPolicies.html
@@ -114,7 +114,7 @@
   <md-button  class="md-raised" ng-click="apiPoliciesCtrl.savePaths();">
     Save
   </md-button>
-  <md-button class="md-warn" type="button" ng-click="apiPoliciesCtrl.reset()">
+  <!--md-button class="md-warn" type="button" ng-click="apiPoliciesCtrl.reset()">
     Reset
-  </md-button>
+  </md-button-->
 </div>
