--- a/src/app/api/admin/apiMonitoring.html
+++ b/src/app/api/admin/apiMonitoring.html
@@ -36,7 +36,7 @@
       <div layout="" layout-sm="column" flex="80">
         <md-input-container class="flex">
           <label>Interval</label>
-          <input ng-model="monitoringCtrl.api.monitoring.interval" type="number" ng-required="true">
+          <input ng-model="monitoringCtrl.api.monitoring.interval" type="number" min="1" ng-required="true">
         </md-input-container>
 
         <md-input-container class="flex">
