fix: Monitoring switch is now sync correctly

--- a/src/app/api/admin/apiMonitoring.html
+++ b/src/app/api/admin/apiMonitoring.html
@@ -19,7 +19,7 @@
 <div layout="row">
   <md-content flex="30" style="background-color: white;">
     <div layout="column" layout-sm="column">
-      <md-switch ng-model="monitoringCtrl.monitoringEnabled"
+      <md-switch ng-model="monitoringEnabled"
                  ng-change="monitoringCtrl.switchEnabled()" class="md-block">
         Enabled
       </md-switch>
