--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -30,7 +30,7 @@ html {
 
 .user-avatar {
   border-radius: 99%;
-}	
+}
 
 .md-toolbar-tools-bottom {
   font-size: small;
@@ -72,7 +72,7 @@ html {
 }
 
 .face {
-  margin: 0px 16px; 
+  margin: 0px 16px;
 }
 
 md-toolbar.md-tall {
@@ -110,18 +110,18 @@ ng-md-icon {
 }
 
 .btn-group ng-md-icon {
-	position: relative;
+  position: relative;
   top: 3px;
 }
 
 .breadcrumb {
-	margin-bottom: 0px !important;
-	padding: 0px !important;
+  margin-bottom: 0px !important;
+  padding: 0px !important;
   background-color: transparent !important;
 }
 
 .gravitee-card:hover {
-	box-shadow: 0 7px 8px -4px rgba(0,0,0,.2),0 12px 17px 2px rgba(0,0,0,.14),0 5px 22px 4px rgba(0,0,0,.12);
+  box-shadow: 0 7px 8px -4px rgba(0, 0, 0, .2), 0 12px 17px 2px rgba(0, 0, 0, .14), 0 5px 22px 4px rgba(0, 0, 0, .12);
   z-index: 1;
 }
 
