--- a/src/app/components/sidenav/sidenav.html
+++ b/src/app/components/sidenav/sidenav.html
@@ -20,7 +20,7 @@
 		<div class="sidenav-user-contents">
 			<div>
 				<img src="app/images/GRAVITEE_LOGOclair-04.png" width="64px" height="64px" style="vertical-align:middle;" />
-				<span id="sidenav-user-name">{{sidenavCtrl.user.principal.username}}</span>
+				<span id="sidenav-user-name"><strong>{{sidenavCtrl.user.principal.username}}</strong></span>
 			</div>
 			<md-divider></md-divider>
 		</div>
