--- a/src/app/components/sidenav/sidenav.scss
+++ b/src/app/components/sidenav/sidenav.scss
@@ -10,11 +10,11 @@ md-sidenav {
 }
 
 .sidenav-list a {
-	color: #fff;
+	color: #222;
 }
 
 .sidenav-list ng-md-icon {
-	fill: #fff;
+	fill: #222;
 }
 
 .sidenav-list-button {
@@ -25,9 +25,7 @@ md-sidenav {
 }
 
 #sidenav-user-name {	
-	font-size: 1.725rem;
-  white-space: nowrap;
-  color: #fff;
+  color: #767676;
 }
 
 #sidenav-footer a {
