--- a/src/app/application/dialog/addMember.dialog.html
+++ b/src/app/application/dialog/addMember.dialog.html
@@ -18,7 +18,7 @@
   <md-dialog aria-label="Add member" style="width: 60%">
     <md-toolbar>
       <div class="md-toolbar-tools">
-        <h2>Add member to the application</h2>
+        <h2>Add member</h2>
         <span flex></span>
         <md-button class="md-icon-button" ng-click="hide()">
           <ng-md-icon icon="close"></ng-md-icon>
