--- a/src/app/application/details/applicationMembers.html
+++ b/src/app/application/details/applicationMembers.html
@@ -31,16 +31,16 @@
 						<span ng-switch-when="primary_owner"><b>{{member.user}}</b></span>
 						<span ng-switch-default>{{member.user}}</span>
 					</td>
-		      <td ng-show="member.type != 'primary_owner'">
+		      <td ng-show="member.type != 'primary_owner' && applicationCtrl.isOwner()">
 						<md-select ng-model="member.type" placeholder="Other" ng-change="applicationCtrl.updateMember(member)">
 				      <md-option ng-value="type" ng-repeat="type in applicationCtrl.membershipTypes">{{type}}</md-option>
 				    </md-select>
 					</td>
-					<td ng-hide="member.type != 'primary_owner'">
-						<span ng-hide="member.type != 'primary_owner'"><b>{{member.type}}</b></span>
+					<td ng-hide="member.type != 'primary_owner' && applicationCtrl.isOwner()">
+						<span><b>{{member.type}}</b></span>
 		      </td>
 		      <td>
-						<div ng-if="member.type != 'primary_owner'">
+						<div ng-if="member.type != 'primary_owner' && applicationCtrl.isOwner()">
 							<ng-md-icon ng-click="applicationCtrl.showDeleteMemberConfirm($event, member)" icon="delete" size="24" style="cursor: pointer;"></ng-md-icon>
 						</div>
 					</td>
@@ -50,6 +50,6 @@
 	</md-data-table-container>
 </div>
 
-<md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="applicationCtrl.showAddMemberModal($event)">
+<md-button ng-if="applicationCtrl.isOwner()" class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="applicationCtrl.showAddMemberModal($event)">
   <ng-md-icon icon="add"></ng-md-icon>
 </md-button>
