--- a/src/app/api/apisThumbMode.html
+++ b/src/app/api/apisThumbMode.html
@@ -26,6 +26,7 @@
 					</div>
 					<md-button class="md-icon-button md-icon-right" ng-if="apisCtrl.isOwner(api)"
 										 ng-click="$event.stopPropagation()" ui-sref="apis.admin.general({apiId: api.id})">
+            <md-tooltip md-direction="left">Manage this API</md-tooltip>
 						<ng-md-icon icon="settings" aria-label="{{api.id}}"></ng-md-icon>
 					</md-button>
 				</div>
