Update table column name

--- a/src/app/application/details/applicationAPIs.html
+++ b/src/app/application/details/applicationAPIs.html
@@ -20,7 +20,7 @@
 		<table md-data-table class="md-primary">
 			<thead>
 				<tr>
-					<th>API Key</th>
+					<th>API</th>
           <th>Revocation Date</th>
           <th>Expiration Date</th>
 					<th>
