--- a/src/app/api/admin/apikeys/apikeys.html
+++ b/src/app/api/admin/apikeys/apikeys.html
@@ -20,7 +20,7 @@
 		<table md-data-table class="md-primary">
 			<thead>
 				<tr>
-					<th>API Key</th>
+					<th>Application</th>
           <th>Revocation Date</th>
           <th>Expiration Date</th>
           <th>
