refactor: add scroll for api description + remove unused angular sanitize dependency

--- a/src/app/api/api.scss
+++ b/src/app/api/api.scss
@@ -139,6 +139,15 @@ $flowRadius: 120px;
   fill: white;
 }
 
+.gravitee-api-header-description {
+	background-color: transparent;
+}
+
+.gravitee-api-header-read-more {
+	height: 40px;  
+	color: white;
+}
+
 .gravitee-api-documentation-empty {
   font-size: 30px;
   opacity: 0.5;
