refactor: allows to edit page name + api icon start/stop

--- a/src/app/api/apisThumbMode.html
+++ b/src/app/api/apisThumbMode.html
@@ -44,8 +44,8 @@
 						</div>
 						<div flex="33">
 							<div class="description-block">
-								<ng-md-icon ng-if="api.state === 'started'" icon="play_arrow" size="32" style="fill: green;" title="Started"></ng-md-icon>
-								<ng-md-icon ng-if="api.state !== 'started'" icon="stop" size="32" style="fill: red;" title="Stopped"></ng-md-icon>
+								<ng-md-icon ng-if="api.state === 'started'" icon="radio_button_on" size="32" style="fill: green;" title="Started"></ng-md-icon>
+								<ng-md-icon ng-if="api.state !== 'started'" icon="radio_button_off" size="32" style="fill: red;" title="Stopped"></ng-md-icon>
 							</div>
 						</div>
 					</div>
