--- a/src/app/api/admin/documentation/apiDocumentation.html
+++ b/src/app/api/admin/documentation/apiDocumentation.html
@@ -16,7 +16,7 @@
 
 -->
 <div layout="row" ng-init="documentationCtrl.list()">
-  <md-list layout="column" class="inset" flex="20">
+  <md-list ng-if="listPagesDisplayed" layout="column" class="inset" flex="20">
     <md-item dragula="'pages-list'" dragula-scope="$parent" ng-repeat="page in documentationCtrl.pages">
         <md-item-content layout="row" layout-align="start center" ui-sref="apis.admin.documentation.page({pageId: page.id})">
           <md-button class="gravitee-api-page-menu-item" ng-click="documentationCtrl.selectPage(p)"
@@ -31,7 +31,7 @@
         </md-item-content>
     </md-item>
   </md-list>
-  <div flex="80" ui-view></div>
+  <div flex ui-view></div>
 </div>
 <md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="documentationCtrl.showNewPageDialog()">
   <ng-md-icon icon="add"></ng-md-icon>
