--- a/src/app/api/admin/documentation/apiDocumentation.scss
+++ b/src/app/api/admin/documentation/apiDocumentation.scss
@@ -1,20 +1,20 @@
 a.md-button:not([disabled]).selected, .md-button:not([disabled]).selected {
-  background-color: rgba(158,158,158,0.2);
+  background-color: rgba(158, 158, 158, 0.2);
 }
 
 .documentation-content-header {
-    position: relative;
-    padding: 15px 15px 0px;
+  position: relative;
+  padding: 15px 15px 0px;
 }
 
 .documentation-content-header > h1 {
-    margin: 0px;
-    font-size: 24px;
+  margin: 0px;
+  font-size: 24px;
 }
 
 .documentation-content-header > h1 > small {
-    font-size: 15px;
-    display: inline-block;
-    padding-left: 4px;
-    font-weight: 300;
+  font-size: 15px;
+  display: inline-block;
+  padding-left: 4px;
+  font-weight: 300;
 }
