--- a/src/app/api/admin/documentation/page/apiPage.html
+++ b/src/app/api/admin/documentation/page/apiPage.html
@@ -22,7 +22,8 @@
         <img ng-if="'MARKDOWN' === pageCtrl.page.type" src="app/images/logo_md.png" style="margin: 10px 5px 0 0;width:32px" />
         <img ng-if="'SWAGGER' === pageCtrl.page.type" src="app/images/logo_swagger.png" style="margin: 10px 5px 0 0;width:32px" />
         <img ng-if="'RAML' === pageCtrl.page.type" src="app/images/logo_raml.png" style="margin: 10px 5px 0 0;width:32px" />
-        <h3 style="color: #676a6c; clear:both;">{{pageCtrl.page.name}}</h3>
+        <h3 ng-if="!pageCtrl.editMode" style="color: #676a6c; clear:both;">{{pageCtrl.page.name}}</h3>
+        <input flex ng-if="pageCtrl.editMode" style="color: #676a6c; clear:both;" ng-model="pageCtrl.page.name">
         <md-button ng-show="pageCtrl.editMode" ng-click="pageCtrl.reset()" class="md-icon-button" aria-label="Reset"><ng-md-icon icon="undo" size="16"></ng-md-icon></md-button>
       </div>
       <div layout="row" layout-align="end center" flex="10">
@@ -40,7 +41,7 @@
 
   <md-card-content style="background-color: #fff; border: 1px solid #e7eaec; padding-top: 0px" layout="row">
     <textarea ng-show="pageCtrl.editMode" ng-model="pageCtrl.page.content" cols="170" rows="20"></textarea>
-    <gravitee-page flex="{{!pageCtrl.editMode? '100':'50'}}"
-                   ng-show="!pageCtrl.editMode || pageCtrl.page.type === 'MARKDOWN'" page="pageCtrl.page" enable-try-it="false"></gravitee-page>
+    <gravitee-page flex="{{!pageCtrl.editMode? '100':'50'}}" ng-show="!pageCtrl.editMode || pageCtrl.page.type === 'MARKDOWN'"
+                   page="pageCtrl.page" enable-try-it="false"></gravitee-page>
   </md-card-content>
 </md-card>
