--- a/src/app/policy/policy.scss
+++ b/src/app/policy/policy.scss
@@ -19,6 +19,10 @@
 .gravitee-policy-dropzone-filled {
   border-width: thin;
 }
+.gravitee-card-close {
+  margin: 5px 5px 0 0;
+  cursor: pointer;
+}
 
 .gravitee-policy-draggable {
   md-card md-card-content {
