fix: allow to update application name

--- a/src/app/application/details/applicationGeneral.html
+++ b/src/app/application/details/applicationGeneral.html
@@ -20,7 +20,7 @@
 				name="formApplication" ng-submit="applicationCtrl.update(applicationCtrl.application)" novalidate>
 		<md-input-container class="md-block">
 			<label>Name</label>
-			<input ng-model="applicationCtrl.application.name" type="text" ng-required="true" ng-disabled="true">
+			<input ng-model="applicationCtrl.application.name" type="text" ng-required="true">
 		</md-input-container>
 		<md-input-container class="md-block">
 			<label>Type</label>
